packages/sci-cream/src/balancing/snapshots/sci_cream__balancing__tests__balancing_issues_report_real_recipe_conflicting_targets.snap
---
source: packages/sci-cream/src/balancing/tests.rs
expression: "report_balancing_issues(&comps, &targets, &[], None)"
---
targets:
  MilkFat                45.00
  Sucrose                25.00
  TotalSugars            18.00

[warning] Target for 'Milk Fat' (45) is outside the reachable range [0, 36]
[warning] Target for 'Sucrose' (25) exceeds target for 'Sugars' (18), but 'Sucrose' is part of 'Sugars', so it can never be larger
