packages/sci-cream/src/balancing/snapshots/sci_cream__balancing__tests__balancing_issues_report_real_setup_with_ref_recipes_chocolate_powder_only.snap
---
source: packages/sci-cream/src/balancing/tests.rs
expression: "report_balancing_issues(&comps, &fuse_targets(&targets, &[]), None)"
---
targets:
  MilkFat                15.37
  MSNF                   11.36
  CocoaButter             2.00
  CocoaSolids             6.00
  NutSNF                  0.00
  EggSNF                  0.74
  POD                    12.16
  TotalSolids            40.24
  TotalFats              16.54
  Salt                    0.08
  StabilizersPerWater     0.25
  EmulsifiersPerFat       2.20
  ABV                     0.00
  ServingTemp           -13.02

[warning] No ingredient contributes to 'Nut SNF', so its target cannot be affected
[warning] No ingredient contributes to 'Alcohol', so its target cannot be affected
[warning] Targets 'Milk Fat' + 'Cocoa Butter' sum to 17.37, exceeding the target for 'Fats' (16.54), but they are parts of 'Fats', so cannot sum above it
[warning] Target ratio 'Cocoa Butter' : 'Cocoa Solids' (0.33) is outside the range [0.21, 0.21] the ingredients allow
